--- a/Exercise3/Exercise3.tex
+++ b/Exercise3/Exercise3.tex
@@ -1,10 +1,7 @@
 \documentclass[12pt,a4paper]{article}
 \usepackage[utf8]{inputenc}
-\usepackage{amsmath,multicol}
-\usepackage{amsfonts}
-\usepackage{amssymb}
-\usepackage{graphicx}
-\usepackage{enumitem}
+\usepackage{amsmath,enumitem,amsfonts,amssymb,graphicx}
+\usepackage{multicol}
 \usepackage{sectsty}
 
 \usepackage{tikz}
@@ -77,14 +74,16 @@
   ]
   \node [env] {$\gamma = a \land d$}
 	child { node [env] {$a$}
-			child { node [sub,  label=right: \small{Stop exploring, duplicate}] {$a$}
+			child { node [sub,  label=right: \small{Stop exploring, duplicate}] 
+						{$a$}
 					edge from parent node [above] {$regr_{o_3}$} 
 			}
 			child { node [end, label=right:\small{This represents an allowed initial state}] {$b$}
 					edge from parent node [above] {$regr_{o_2}$}
 			}
 			child { node [sub, label=right: 
-					\small{Stop exploring, $regr_{o_1}(a)$ is subset of a}] {$b \land d \land a $}
+					\small{Stop exploring, $regr_{o_1}(a)$ is subset of a}] 
+					{$b \land d \land a $}
 					edge from parent node [above] {$regr_{o_1}$}
 			}
 		edge from parent node [above] {$regr_{o_3}$}
