--- a/Exercise5/Exercise5.tex
+++ b/Exercise5/Exercise5.tex
@@ -55,12 +55,15 @@
 	\begin{addmargin}[1em]{1em}% 1em left, 2em right
 		\quad Given an initial state with a black tile to the left of a white
 		tile, the only way that a black tile can reach the goal state is if
-		it jumps this white tile. The cost of jumping over one tile is 
-		at least 1, and if it jumps over two tiles then the cost is 2. 
-		This means that the cost of each black tile, to reach the right end,
-		is at least the number of white tiles to the right, which is 
+		it jumps this white tile. \\
+		If it jumps through the white tile, this movement always causes a cost equal or bigger to 1 per white tile at the right side, this can be seen because the cost were established as following.\\
+		- The cost of jumping over one tile is 1.\\
+		- The cost of jumping over two neighboring tiles is 2. \\
+		Additionally it is not always equal, as movements without jumping are allowed and is not always possible to jump the tiles without additional movements.\\
+		This means that the sum of cost operations required for the black tile to reach a goal state,
+		is \textbf{at least} the number of white tiles to the right, which is 
 		precisely our heuristic. Therefore $h(s) \leq h^*(s) $
-		then the heuristic is \emph{admissible}
+		and in consequence the heuristic is \emph{admissible}
 	\end{addmargin}
 
 %%%%%%%%%%%%%%%%%%%%%% Exercise 5.2 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -68,7 +71,14 @@
 \begin{enumerate}[label=\alph*)]
 	\item \textbf{For each invocation of the 
 			\texttt{improve} procedure, specify
-			the state after improvement by giving the new coodinates}
+			the state after improvement by giving the new coodinates}\\
+	The given coordinates will be expressed as H(Horizontal Coordinate, Vertical Coordinate), G(Horizontal Coordinate, Vertical Coordinate), where H is the position of Hansel and G is the position of Gretel\\
+	\[h(\sigma_0) = 5 \qquad \sigma_0 = H(1,2), G(4,4) \]
+	\[h(\sigma_1) = 4 \qquad \sigma_1 = H(1,3), G(4,4) \]
+	\[h(\sigma_2) = 3 \qquad \sigma_2 = H(2,3), G(4,4) \]	\[h(\sigma_3) = 2 \qquad \sigma_3 = H(3,3), G(4,4) \]	\[h(\sigma_4) = 1 \qquad \sigma_4 = H(3,3), G(3,2) \]	\[h(\sigma_5) = 0 \qquad \sigma_5 = H(3,3), G(3,3) \]	
 	\item \textbf{Record the solution plan}
+	\[north_H \quad \rightarrow \quad east_H \quad \rightarrow \quad east_H \quad \rightarrow \quad east_G
+	\quad \rightarrow \quad south_G \]
+	\[\quad \rightarrow \quad south_G \quad \rightarrow \quad west_G \quad \rightarrow \quad west_G \quad \rightarrow \quad north_G\]
 \end{enumerate}
 \end{document}
