--- a/Exercise4/Exercise4.tex
+++ b/Exercise4/Exercise4.tex
@@ -149,7 +149,7 @@
 					child {
 						node [accepted,  label=right: 
 						\small{goal state}] 
-						{$jd \land rh$}
+						{$jh \land rh$}
 						edge from parent node [above] {$o_1$} 
 					}
 					child {
