--- a/Exercise6/AIP-EX06-Rosete-Borja.tex
+++ b/Exercise6/AIP-EX06-Rosete-Borja.tex
@@ -51,7 +51,7 @@
 	The negative effects of the operators were removed.\\\\
 	
 	\item \textbf{Give a sequence of $\pi$ of operators (as short as possible) from O such that $\pi$ is not a plan of $\Pi$ but $\pi^+$ is a plan of $\Pi^+$.}\\
-		\[ \pi^+ = bakeCake^+, eatCake^+ \]
+		\[ \pi^+ = \{ bakeCake^+, eatCake^+ \} \]
 		Why? We can simulate this plan in both planning tasks to demonstrate it.\\
 		States after $bakeCake^+$ 	
 		\[S_1 = \lbrace haveCake \rightarrow 1, eatenCake \rightarrow 0, haveNoCake \rightarrow 1 \rbrace \]
